--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
+title: PyPBT Testing tool
+description: Testing with PyPBT different repositories
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+- jekyll-remote-theme
